# Automa-o_RPA_RI

./: pyproject.toml
rpa_real_investor/: main.py
